--- a/.github/workflows/call_another.yml
+++ b/.github/workflows/call_another.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Use My Workflow
-        uses: RachitGupta008/github-actions/blob/master/.github/workflows/schedule.yaml@main
+        uses: RachitGupta008/github-actions/blob/master/.github/workflows/schedule.yaml@master
